--- a/kubernetes/registry-local-pv.yaml
+++ b/kubernetes/registry-local-pv.yaml
@@ -1,7 +1,24 @@
+# Copyright (c) 2019, UK HealthCare (https://ukhealthcare.uky.edu) All Rights Reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+##########################
+
+
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: registry-storage
+  name: registry-storage-class
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 
@@ -10,13 +27,13 @@ volumeBindingMode: WaitForFirstConsumer
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: registry-volume
-  namespace: registry
+  name: registry-persistent-volume
 spec:
   capacity:
     storage: 5Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: registry-storage
+  storageClassName: registry-storage-class
   hostPath:
-    path: "/Users/Shared/Kubernetes/persistent-volumes/registry"
+    path: "/Users/Shared/Kubernetes/persistent-volumes/default/registry"
+
